<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fundoLogin">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.TelaCarrinho">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/txtBusca"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/caixa_texto"
        android:ems="10"
        android:hint="@string/vazia"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="35dp"
        android:paddingBottom="4dp"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:paddingEnd="35dp"
        android:paddingStart="10dp"
        android:autofillHints="@string/Busca_carrinho" />

    <ImageView
        android:id="@+id/btnPesquisar"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBusca"
        app:layout_constraintEnd_toEndOf="@+id/txtBusca"
        app:layout_constraintTop_toTopOf="@+id/txtBusca"
        app:srcCompat="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/pesquisar_produtos" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/borda"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txtBusca" />

    <CheckBox
        android:id="@+id/checkItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <ImageView
        android:id="@+id/imgKit1"
        android:layout_width="105dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/cesta_cervejaequeijo"
        android:contentDescription="@string/imagem_do_produto" />

    <TextView
        android:id="@+id/txtKit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_kit1_carrinho"
        android:textColor="@color/laranja"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/labelValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/valor_unitario01_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txtKit1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/btnAumentar"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/aumentar_quantidade"
        app:layout_constraintStart_toEndOf="@+id/txtQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/labelValor"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <ImageView
        android:id="@+id/btnDiminuir"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/diminuir_quantidade"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/labelValor"
        app:srcCompat="@drawable/ic_baseline_remove_circle_24" />

    <TextView
        android:id="@+id/labelSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/subtotal_01_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantidade" />

    <TextView
        android:id="@+id/txtPrecoUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:text="@string/preço_unitario01_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/labelValor"
        app:layout_constraintTop_toBottomOf="@+id/txtKit1"
        tools:ignore="TextViewEdits" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/borda"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <CheckBox
        android:id="@+id/checkItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageView
        android:id="@+id/imgKit2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/garrafas_fofas"
        android:contentDescription="@string/imagem_produto02_carrinho" />

    <TextView
        android:id="@+id/txtKit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Titulo_produto_carrinho"
        android:textColor="@color/laranja"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/labelValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/valor_unitario_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txtKit2" />

    <EditText
        android:id="@+id/txtQuantidade2"
        android:layout_width="42dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:text="@string/quantidade_default_carrinho"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btnDiminuir2"
        app:layout_constraintTop_toBottomOf="@+id/labelValor2"
        android:autofillHints="@string/quantidade2"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/btnAumentar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/txtQuantidade2"
        app:layout_constraintTop_toBottomOf="@+id/labelValor2"
        app:srcCompat="@drawable/ic_baseline_add_circle_24"
        android:contentDescription="@string/aumentar_quantidade" />

    <ImageView
        android:id="@+id/btnDiminuir2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/labelValor2"
        app:srcCompat="@drawable/ic_baseline_remove_circle_24"
        android:contentDescription="@string/diminuir_quantidade" />

    <TextView
        android:id="@+id/labelSubtotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Subtotal_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantidade2" />

    <TextView
        android:id="@+id/txtPrecoUnit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="15dp"
        android:text="@string/preço02_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/labelValor2"
        app:layout_constraintTop_toBottomOf="@+id/txtKit2" />

    <TextView
        android:id="@+id/txtSubtotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/Subtotal02_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/labelSubtotal2"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantidade2" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="111dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botao"
        android:onClick="telaComprar"
        android:text="@string/confirmar"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/labelTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_r"
        android:textColor="@color/laranja"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/Total_carrinho"
        android:textColor="@color/laranja"
        app:layout_constraintStart_toEndOf="@+id/labelTotal"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/txtSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="22dp"
        android:hint="@string/preço01_carrinho"
        android:inputType="number"
        android:text="@string/preço01_carrinho"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/labelSubtotal"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantidade"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/txtQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnDiminuir"
        app:layout_constraintTop_toBottomOf="@+id/labelValor" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>