<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fundoLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.TelaInicio">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/imgKits"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/imagem_kits_inicio"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/kit_c_tacas" />

        <ImageView
            android:id="@+id/imgCervejas"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/imagem_de_cervejas_inicio"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgKits"
            app:srcCompat="@drawable/cervejas4" />

        <Button
            android:id="@+id/btnKits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_texto"
            android:onClick="telaKits"
            android:text="@string/kits"
            android:textColor="@color/laranja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgKits" />

        <Button
            android:id="@+id/btnCervejas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/caixa_texto"
            android:onClick="telaKits"
            android:text="@string/cervejas"
            android:textColor="@color/laranja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgCervejas" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/footer"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCervejas"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgInsta"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/compartilhe_no_instagram"
                    app:layout_constraintStart_toStartOf="@+id/guideline13"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/instagram" />

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/compartilhe_no_twitter"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/imgWhats"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/compartilhe_no_whatsapp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline14"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/whatsapp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.46" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.26" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.66" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>